Bug #67913 - mysqlnd ignores MYSQLI_OPT_CONNECT_TIMEOUT option